更改配置文件

--- a/config-server/src/main/resources/static/respo/config-client-dev.properties
+++ b/config-server/src/main/resources/static/respo/config-client-dev.properties
@@ -1,6 +1,8 @@
 
 foo = foo version 2
 democonfigclient.message=hello spring io
+spring.rabbitmq.host=127.0.0.1
+spring.rabbitmq.name=test
 
 # routes to serviceId
 # routes to url
